# Image-Segementation

./: .replit  LICENSE  Model-training.ipynb  README.md  app.py  index.py  model.pkl  model.py  pyproject.toml  requirement.txt  vercel.json  wsgi.py
Image-Segementation-Dataset/: segmentation.data  segmentation.test
templates/: footer.html  home.html  navbar.html  prediction.html
