[tool.poetry]
name = "repl-nix-image-segementation"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "repl_nix_image_segementation"}]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.3"
numpy = "^1.26.4"
scikit-learn = "^1.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
